2004-04-19  Ilja Booij  <ilja@ic-s.nl>

	* auth.h: (auth_user_exists) added splint annotation to 'out' 
	parameter.

	* pipe.c (send_reply): initialise escaped_send_address to hold only '\0'
	characters before sprintf-inf to it.
	(execute_auto_ran): check if GetConfigValue() actually works.
	(execute_auto_ran): changed some function calls to include checks for
	return values indicating errors.
	(discard_client_input): changed return type to int to be able to signal
	error.
	(discard_client_input): changed handling of fgets to be able to continue
	in case of a failing fgets().
	(store_message_temp): solved some possible memory leaks. Added some extra
	checks for return values.

2004-04-16  Ilja Booij  <ilja@ic-s.nl>

	* pipe.c (send_notification): fixed some possible memory leaks
	and error-prone statements (sprintf to snprintf), thanks to
	using splint.
	(send_reply): fixed some possible memory leaks
	and error-prone statements (sprintf to snprintf), thanks to
	using splint. 

	* imap4.c: ci_write() function removed (moved to imap4.c)

	* imaputil.c (ci_write): ci_write function is now added to 
	imaputil.c (was in imap4.c)

	* imapcommands.c: all fprintf statements are replaced by ci_write 
	calls to add error checking.

2004-04-15  Ilja Booij  <ilja@ic-s.nl>

	* db.c (db_check_quotum_used): changed query so it also returns 1 if
	over quotum on PostgreSQL (and Oracle). Added db_free_result() to 
	also free result if over quotum. The function now just checks if the
	query returns any rows.
	

2004-04-14  Ilja Booij  <ilja@ic-s.nl>

	* header.c (read_header): use strncat instead of strncpy to add new
	line to message

	* mysql/dbmysql.c: auth_res removed

	* mime.c (mime_readheader): now makes a copy of the block data before
	finding headers. Before, the block data was altered, which it should
	not be doing! The block is now passed a const char*

	* pgsql/dbpgsql.c: auth_res removed

	* db.c (db_get_notify_address): changed query_result to const char*